# ProjectBlackMirror

./: .gitignore  f  readme.adoc
API-BaseDeDonnée-master/: Dockerfile  Profs.db  index.js  package-lock.json  package.json  readme.adoc
ARI-Server-master/: CMakeLists.txt  Dockerfile  readme.adoc
ARI-Server-master/Exec_env/: BlackMirror.service  config.ini  readme.txt
ARI-Server-master/autre/: Test  main.py
ARI-Server-master/scripts/: compiler-serveur  compiler-serveur.sh  get-exec-from-docker  installer-dependance  installer-dependance.sh  installer-opencv  reset-docker
ARI-Server-master/src/: camControl.h  camControl.hpp  dataBase.hpp  imgUtil.cpp  imgUtil.hpp  logger.h  logger.hpp  main.c  main.cpp  server.h  server.hpp
ARI-Server-master/src/include/: ws.h
ARI-Server-master/src/include/jdbc/cppconn/: driver.h
ARI-Server-master/src/include/lib64/: libmysqlcppconn.so.9  libmysqlcppconn8.so.2
ARI-Server-master/src/mini/: ini.h
ARI-Server-master/src/wsServer/: ws.c
BotDiscord/: config.json  index.js  package.json
LED-Controller-master/: readme.md
LED-Controller-master/barrierearduino/: barrierearduino.ino
Projet-IHM-Plaque/: FinalTest.pro  Projet-IHM-Plaque.pro  camerawidget.cpp  camerawidget.h  cboxform.cpp  cboxform.h  logger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Projet-IHM-Plaque/test3/: mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  test3.pro
ServerClientComLib-master/: CMakeLists.txt  build.sh  readme.adoc
ServerClientComLib-master/src/: logger.h  main.c
ServerClientComLib-master/src/include/: ws.h
ServerClientComLib-master/src/wsServer/: ws.c
Serveur_Config/: README.adoc  config.nix
build-Projet-IHM-Plaque-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Projet-IHM-Plaque-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QDialogButtonBox.77D00BD65DCDF957.idx  QSqlQuery.898DDF1B26F9F464.idx  QString.E9DEF06FF3897E94.idx  cstddef.F78D9A1BBB21AE57.idx  logger.h.C32908891692F513.idx  main.cpp.A7C10A2DCC9EB6B9.idx  mainwindow.cpp.4A88CAB834B94614.idx  mainwindow.h.AB3C4B7464F47BE4.idx  qdialog.h.46B0067A7A770A53.idx  qdialogbuttonbox.h.6CD5FE4BCE873990.idx  qflags.h.EFD6B7011DBD76EB.idx  qframe.h.AA2CF2870A55A8A9.idx  qglobal.h.55FD409C867BA178.idx  qlabel.h.8789861129FFD0BE.idx  qmessagebox.h.27BE888AEEAFF0EF.idx  qobjectdefs.h.2310DEBEB22D38B0.idx  qobjectdefs.h.52552309B4975986.idx  qobjectdefs_impl.h.CE473D8AC559A6B9.idx  qsqldatabase.h.D7D9162CC090AC3C.idx  qsqlquery.h.0426197D653B47AE.idx  qtabwidget.h.51EFAE11FA1A1199.idx  qtsqlglobal.h.F79BB10A95CBCF5D.idx  qwidget.h.19234C03714635B9.idx  qwindowdefs.h.D1D5153CCE73804F.idx
build-Projet-IHM-Plaque-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-Projet-IHM-Plaque-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Projet-IHM-Plaque-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QListWidget.CEE1A37ECCC3D690.idx  QStackedWidget.6A8DC603950C5E52.idx  QTableWidget.D1D2A106FE3EB2FA.idx  logger.h.C32908891692F513.idx  main.cpp.A7C10A2DCC9EB6B9.idx  mainwindow.cpp.4A88CAB834B94614.idx  mainwindow.h.AB3C4B7464F47BE4.idx  qabstractitemview.h.09066C0C7EB09C5F.idx  qabstractscrollarea.h.E61D810325F72DF0.idx  qabstractspinbox.h.C482DD6B8AAFDEF4.idx  qdialog.h.347C320ADD78E1ED.idx  qframe.h.5BCD744FD99883F7.idx  qheaderview.h.09C42C359C890922.idx  qlistview.h.C56115FB77A111DF.idx  qlistwidget.h.D5562E8C936DF9D2.idx  qpushbutton.h.9B74519AC8464102.idx  qstackedwidget.h.5F707930DC8F0283.idx  qstyleoption.h.74CC5F620D71DF6D.idx  qtableview.h.9FDCC342916173D2.idx  qtablewidget.h.89A88B86B46936D2.idx  (+3 more)
build-Projet-IHM-Plaque-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
